[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/MenuItems/baner_1.png" type="Texture" id=1]
[ext_resource path="res://assets/demo/yoster-island.regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://scenes/FadeIn/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/LevelsCreator/background.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/LevelsCreator/Buttons/NewGame.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/LevelsCreator/Buttons/OptionsButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/LevelsCreator/Buttons/MenuButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/Misc/Font.tres" type="DynamicFont" id=9]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" parent="." instance=ExtResource( 5 )]

[node name="YSort" type="YSort" parent="."]

[node name="Menu" type="VBoxContainer" parent="YSort"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="YSort/Menu"]
margin_right = 1040.0
margin_bottom = 150.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="YSort/Menu"]
margin_top = 200.0
margin_right = 1040.0
margin_bottom = 509.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="YSort/Menu/CenterRow"]
margin_right = 518.0
margin_bottom = 309.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1

[node name="NewGame" parent="YSort/Menu/CenterRow/Buttons" instance=ExtResource( 6 )]
margin_right = 518.0
margin_bottom = 60.0
rect_min_size = Vector2( 360, 60 )
hint_tooltip = "Start the adventure"
mouse_default_cursor_shape = 2

[node name="Continue" parent="YSort/Menu/CenterRow/Buttons" instance=ExtResource( 8 )]
margin_top = 85.0
margin_right = 518.0
margin_bottom = 145.0
rect_min_size = Vector2( 360, 60 )
hint_tooltip = "Load latest save"
mouse_default_cursor_shape = 2

[node name="Options" parent="YSort/Menu/CenterRow/Buttons" instance=ExtResource( 7 )]
margin_top = 170.0
margin_right = 518.0
margin_bottom = 230.0
rect_min_size = Vector2( 360, 60 )
hint_tooltip = "Too little time for AA but just enough for Fullscreen"
mouse_default_cursor_shape = 2

[node name="Looserboard" type="Button" parent="YSort/Menu/CenterRow/Buttons"]
margin_top = 255.0
margin_right = 518.0
margin_bottom = 309.0
custom_fonts/font = ExtResource( 9 )
flat = true

[node name="Label" type="Label" parent="YSort/Menu/CenterRow/Buttons/Looserboard"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 9 )
text = "Looserboard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="YSort/Menu/CenterRow"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 309.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VersionLabel" type="Label" parent="YSort/Menu"]
margin_top = 559.0
margin_right = 1040.0
margin_bottom = 628.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Version 2.3
Made in Godot 3.1.1
"

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Exit" type="Button" parent="."]
margin_left = 1064.0
margin_top = 560.0
margin_right = 1182.0
margin_bottom = 614.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 9 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="YSort/Menu/CenterRow/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="YSort/Menu/CenterRow/Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="YSort/Menu/CenterRow/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="YSort/Menu/CenterRow/Buttons/Looserboard" to="." method="_on_Looserboard_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
